# AutoGBD

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RELEASE.md  pyproject.toml  requirements-ai.txt  requirements-app.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
autogbd/: __init__.py  app.py  cli.py
autogbd/cleaning/: __init__.py  rules.py
autogbd/core/: __init__.py  config_loader.py  pipeline.py  provenance.py
autogbd/io/: __init__.py  handlers.py
autogbd/mapping/: __init__.py  ai_assistant.py  engine.py
autogbd/plugins/: __init__.py
autogbd/quality/: __init__.py  checks.py
autogbd/reporting/: __init__.py  generator.py
demos/: README.md
docs/: README.md
examples/: config.example.yaml
scripts/: publish.sh
tests/: __init__.py  conftest.py  test_cleaning.py  test_config_loader.py  test_io_handlers.py  test_mapping.py  test_pipeline.py  test_provenance.py  test_quality.py
website/: index.html  script.js  styles.css
